# ISLA-LP-Benchmark

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test_solver.py
.github/workflows/: ci.yml
data/: milp_example.txt  problem_multi.txt
data/benchmark_output/: benchmark_report.md  benchmark_results.csv  benchmark_results.json
docs/: DEVELOPER_GUIDE.md  Evolucion.md  MATH_GUIDE.md  USER_GUIDE.md  comandos_reportes.md
src/analysis/: __init__.py  analysis.py  benchmark_report.py  benchmark_results.py  multi_analysis.py
src/cli/: __main__.py  benchmark.py  solve.py
src/core/: __init__.py  bound.py  constraint.py  problem.py  solution.py
src/matrix/: builder.py
src/parser/: cplex_parser.py  lp_parser.py
src/solver/: __init__.py  alpine_solver.py  base.py  benchmark.py  bonmin_solver.py  cbc.py  couenne_solver.py  cvxopt_solver.py  ecos.py  glpk_solver.py  gurobi.py  highs_solver.py  ipopt_solver.py  multi_solver.py  osqp_solver.py  qsoptex_solver.py  scip.py  scs_solver.py  symphony_solver.py
src/visualization/: __init__.py  benchmark_plots.py  feasible_region.py  visualization.py
tests/test_core/: test_problem.py  test_solution.py
tests/test_parsers/: test_lp_parser.py
